add_executable( interpolation.table.make.test make.test.cpp )
set( test_flags ${interpolation_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( interpolation.table.make.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( interpolation.table.make.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( interpolation.table.make.test PUBLIC interpolation )
add_test( NAME interpolation.table.make COMMAND interpolation.table.make.test ) 
