add_executable( interpolation.table.Variant.Iterator.test Iterator.test.cpp )
set( test_flags ${interpolation_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( interpolation.table.Variant.Iterator.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( interpolation.table.Variant.Iterator.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( interpolation.table.Variant.Iterator.test PUBLIC interpolation )
add_test( NAME interpolation.table.Variant.Iterator COMMAND interpolation.table.Variant.Iterator.test ) 
