add_executable( interpolation.table.right.interval.IsCompiletimeConstant.test IsCompiletimeConstant.test.cpp )
set( test_flags ${interpolation_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( interpolation.table.right.interval.IsCompiletimeConstant.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( interpolation.table.right.interval.IsCompiletimeConstant.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( interpolation.table.right.interval.IsCompiletimeConstant.test PUBLIC interpolation )
add_test( NAME interpolation.table.right.interval.IsCompiletimeConstant COMMAND interpolation.table.right.interval.IsCompiletimeConstant.test ) 
